// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineEditInput component Other is checked matches snapshot 1`] = `
.c4 {
  background-color: #fff;
  padding: 0.5rem;
  padding-left: 15px;
  padding-right: 15px;
  border-radius: 8px;
  border-width: 0;
  width: 100%;
  margin: 0;
  box-sizing: border-box;
  line-height: 2;
}

.c4:focus {
  border-width: 0px;
  background-color: #fff;
  box-shadow: none;
  outline: 0;
}

.c5 {
  border-radius: 0 8px 8px 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  position: relative;
  margin: 0.5rem 0 1rem 0;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 3rem;
  background-color: rgba(53,53,63,0.45);
  color: #fff;
  border-top-left-radius: 8px;
  border-bottom-left-radius: 8px;
  line-height: 2;
}

.c2 img {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  color: #000;
  background-color: unset;
  font-size: 18px;
  font-weight: 500;
  width: 2rem;
  margin-left: 8px;
  padding-top: 2px;
}

.c6 {
  color: #000;
  background-color: unset;
  padding-left: 0;
  -moz-appearance: textfield;
}

.c6::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c6::-webkit-input-placeholder {
  font-size: 18px;
  font-weight: 500;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
}

.c6::-moz-placeholder {
  font-size: 18px;
  font-weight: 500;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
}

.c6:-ms-input-placeholder {
  font-size: 18px;
  font-weight: 500;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
}

.c6::placeholder {
  font-size: 18px;
  font-weight: 500;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
}

.c1 {
  margin-bottom: 8px;
  border: 1px solid rgba(255,255,255,0.4);
  box-sizing: border-box;
  border-radius: 8px;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: -webkit-transform 0.1s;
  -webkit-transition: transform 0.1s;
  transition: transform 0.1s;
  background-color: #fff;
}

.c1:hover {
  -webkit-transform: scale(1.01);
  -ms-transform: scale(1.01);
  transform: scale(1.01);
  -webkit-transition: -webkit-transform 0.1s;
  -webkit-transition: transform 0.1s;
  transition: transform 0.1s;
  color: rgba(255,255,255,0.8);
  border: 1px solid #fff;
}

.c7 {
  margin-left: 0;
  margin-right: 12px;
  font-size: 12px;
  text-transform: uppercase;
}

<div
  className="c0 c1"
>
  <span
    className="c2 c3"
  />
  <input
    className="c4 c5 c6"
    type="text"
  />
  <span
    className="c2 c3 c7"
  />
</div>
`;

exports[`InlineEditInput component Other is not checked matches snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  position: relative;
  margin: 0.5rem 0 1rem 0;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 3rem;
  background-color: rgba(53,53,63,0.45);
  color: #fff;
  border-top-left-radius: 8px;
  border-bottom-left-radius: 8px;
  line-height: 2;
}

.c2 img {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  background-color: unset;
  color: rgba(255,255,255,0.6);
  padding: 6px 15px 6px 0;
  font-size: 18px;
  font-weight: 500;
  border-width: 0;
  width: 100%;
  margin: 0;
  line-height: 2;
  border-radius: 0 8px 8px 0;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
}

.c3 {
  color: #000;
  background-color: unset;
  font-size: 18px;
  font-weight: 500;
  width: 2rem;
  margin-left: 8px;
  padding-top: 2px;
}

.c4 {
  color: rgba(255,255,255,0.8);
}

.c1 {
  margin-bottom: 8px;
  border: 1px solid rgba(255,255,255,0.4);
  box-sizing: border-box;
  border-radius: 8px;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: -webkit-transform 0.1s;
  -webkit-transition: transform 0.1s;
  transition: transform 0.1s;
  background-color: rgba(0,0,0,0.2);
}

.c1:hover {
  -webkit-transform: scale(1.01);
  -ms-transform: scale(1.01);
  transform: scale(1.01);
  -webkit-transition: -webkit-transform 0.1s;
  -webkit-transition: transform 0.1s;
  transition: transform 0.1s;
  color: rgba(255,255,255,0.8);
  border: 1px solid #fff;
}

.c6 {
  margin-left: 0;
  margin-right: 12px;
  font-size: 12px;
  text-transform: uppercase;
}

.c7 {
  color: rgba(255,255,255,0.8);
}

<div
  className="c0 c1"
>
  <span
    className="c2 c3 c4"
  />
  <div
    className="c5"
    placeholder="placeholder"
  >
    placeholder
  </div>
  <span
    className="c2 c3 c6 c7"
  />
</div>
`;
